--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.6.0",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
     "core-js": "^2.5.4",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.0",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "apollo-angular-link-http": "^1.6.0",
-    "apollo-link": "^1.2.11",
-    "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.3.2",
-    "graphql-tag": "^2.10.0",
-    "graphql": "^14.3.1"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
